welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: not found: value L
	if (litMessage() == L) {
                            ^BDRBuggle:10: error: not found: value A
	if (litMessage() == A) {
                            ^BDRBuggle:13: error: not found: value B
	if (litMessage() == B) {
                            ^BDRBuggle:16: error: not found: value C
	if (litMessage() == C) {
                            ^BDRBuggle:19: error: not found: value I
	if (litMessage() == I) {
                            ^BDRBuggle:22: error: not found: value Z
	if (litMessage() == Z) {
                            ^BDRBuggle:25: error: not found: value Y
	if (litMessage() == Y) {
                            ^BDRBuggle:28: error: not found: value X
	if (litMessage() == X) {
                            ^